Updated onPrintProgram method with fetch call

--- a/webapp/view/InboundLabel.view.xml
+++ b/webapp/view/InboundLabel.view.xml
@@ -81,7 +81,7 @@
                                 press="onChangeData"
                                 class="guiBtn guiBtnDef actionBtn"/>
 
-                            <Button text="F9-PRGR"
+                            <Button text="F9-PrintHU"
                                 width="8rem"
                                 type="Emphasized"
                                 press="onPrintProgram"
