--- a/webapp/view/InboundLabel.view.xml
+++ b/webapp/view/InboundLabel.view.xml
@@ -9,26 +9,26 @@
 
                     <!-- Main Vertical Form -->
                     <VBox class="guiFormContainer">
-
-                        <!-- HANDLING UNIT -->
-                       <Label text="Inbound Label" class="guiLabel" labelFor="idHu"/>
-                       <HBox alignItems="Center">
+                    <HBox alignItems="Center">
+                        <!-- Inbound Delivery -->
+                       <Label text="Inbound Delivery" class="guiLabel" labelFor="idHu"/>
+                       
     <Input
         id="idHu"
         value="{view>/HuData}"
         maxLength="20"
         class="guiInput guiEditable hu20"
         submit="onHuSubmit"
-        change="onHuChange">
+        change="onHuSubmit">
         <layoutData>
             <FlexItemData growFactor="0"/>
         </layoutData>
     </Input>
 </HBox>
 
-                        <!-- WAREHOUSE -->
-                   <Label text="Warehouse"   class="guiLabel sapUiTinyMarginTop"
-    labelFor="idWh"/>
+
+    <HBox alignItems="Center">       
+    <Label text="Warehouse"   class="guiLabel sapUiTinyMarginTop" labelFor="idWh"/>
 
 <Input
     id="idWh"
@@ -36,23 +36,25 @@
     maxLength="4"
     class="guiInput guiEditable"
 />
-
+</HBox>
                         <!-- IE -->
+                   <HBox alignItems="Center">     
                    <Label text="IE#" class="guiLabel sapUiTinyMarginTop" labelFor="idEI" />
 
-<HBox alignItems="Center">
+
     <Input
         id="idEI"
         value="{view>/rfExtras/VLot}"
-        maxLength="17"
+        maxLength="15"
         editable="true"
         class="guiInput guiEditable"/>
 </HBox>
 
                         <!-- CO -->
+                   <HBox alignItems="Center">     
                    <Label text="CO" class="guiLabel sapUiTinyMarginTop" labelFor="idCO"/>
 
-<HBox alignItems="Center">
+
     <Input
         id="idCO"
         value="{view>/rfExtras/CO}"
@@ -65,7 +67,8 @@
 </HBox>
 
                         <!-- Printer P -->
-                        <Label text="P:" class="guiLabel sapUiTinyMarginTop" labelFor="idP"/>
+                        <HBox alignItems="Center">
+                        <Label text="Printer:" class="guiLabel sapUiTinyMarginTop" labelFor="idP"/>
                         <Input id="idP"
                             value="{view>/rfExtras/P1}"
                             editable="true"
@@ -73,9 +76,10 @@
                              width="18rem"
                             class="guiInput guiEditable"
                         />
-
+                        </HBox>
                         <!-- Printer F -->
-                        <Label text="F:" class="guiLabel sapUiTinyMarginTop" labelFor="idF"/>
+                        <HBox alignItems="Center">
+                        <Label text="Form_Layout:" class="guiLabel sapUiTinyMarginTop" labelFor="idF"/>
                         <Input id="idF"
                             value="{view>/rfExtras/F1}"
                             editable="true"
@@ -83,7 +87,7 @@
                               width="18rem"
                             class="guiInput guiEditable"
                         />
-
+                        </HBox>
                         <!-- ACTION BUTTONS -->
    <VBox class="sapUiMediumMarginTop">
     <HBox>
