demo ready version_5th

--- a/webapp/view/InboundLabel.view.xml
+++ b/webapp/view/InboundLabel.view.xml
@@ -34,6 +34,8 @@
     id="idWh"
     value="{view>/Warehouse}"
     maxLength="4"
+     change="onWarehouseChange"
+    submit="onWarehouseSubmit"
     class="guiInput guiEditable"
 />
 </HBox>
